[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
miette = "7.4.0"
nom = "7.1.3"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["time"] }

[lints.rust]
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"
unused_mut = "allow"